# showstats

./: .gitignore  Makefile  README.md  README.qmd  changelog.md  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt
.github/: pytest.yaml
.github/workflows/: pytest.yaml
docs/: README.md  README.qmd  conf.py  index.rst  modules.rst  showstats.rst  timing.ipynb
notebooks/: README.qmd  timing.ipynb
src/dfstats/: __init__.py  dfstats.py  utils.py
src/polars_summary_tables/: utils.py
src/showstats/: __init__.py  _table.py  _utils.py  constants.py  metatable.py  pl_namespace.py  showstats.py  tables.py  utils.py
src/summtable/: summtable.py  utils.py
tests/: conftest.py  test_dfstats.py  test_edge.py  test_funs.py  test_make_stats_df.py  test_make_tables.py  test_make_tbl.py  test_metatable.py  test_scientific_conversion.py  test_show.py  test_table.py  test_utils.py
