[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = ["polars >= 0.20.21"]
name = "summarystats"
description = "Produces nice summary tables for data frames"
authors = [{ name = "Matthias Kaeding" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
pandas = ["pandas>=1.5.3", "pyarrow>=10.0.0"]


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pytest.ini_options]
pythonpath = ["src/summarystats"]

[project.urls]
Homepage = "https://github.com/matthiaskaeding/summarystats"
Issues = "https://github.com/matthiaskaeding/summarystats/issues"
