[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
dependencies = ["polars>=0.20.21"]
name = "dfstats"
description = "Produces nice summary tables for polars data frames"
authors = [{ name = "Matthias Kaeding" }]
classifiers = ["Programming Language :: Python :: 3"]
version = "0.0.1"
readme = "README.md"
requires-python = "~=3.11"

[project.optional-dependencies]
pandas = ["pandas>=1.5.3", "pyarrow>=17.0.0"]


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pytest.ini_options]
pythonpath = ["src/dfstats"]
